# voxbridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  panel.html  setup.html  subtitle.html  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-16-voxbridge-ux-redesign.md
docs/superpowers/specs/: 2026-03-16-voxbridge-ux-redesign-design.md
scripts/: tauri-build-debug-local.sh  tauri-dev-local.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  tray.rs
src/panel/: panel.css  panel.ts
src/settings/: settings.css  settings.ts
src/setup/: setup.css  setup.ts
src/shared/: clipboard.ts  config-types.ts  events.ts  ipc.ts  languages.ts  theme.css
src/shared/i18n/: en.json  index.ts  zh-CN.json
src/subtitle/: subtitle.css  subtitle.ts
