[package]
name = "voxbridge"
version = "0.1.1"
description = "Real-time speech translation desktop app powered by Tauri and Rust"
authors = ["lzkdev"]
license = "MIT"
repository = "https://github.com/lzkdev/voxbridge"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voxbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
cpal = "0.15"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3.31"
base64 = "0.22.1"
urlencoding = "2.1.3"
dirs = "6"

tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
